# CWAML

./: .gitmodules  DIRECTORY_MAP.md  README.md  run.bat  run.sh
example_lib/include/: example_lib_api.h
example_lib/src/: example_lib.cpp
example_mod/: CMakeLists.txt
example_mod/include/: README.md  mod_context.h  overlay.h
example_mod/include/features/: game_hooks.h  locale_demo.h  services_demo.h
example_mod/include/menu/: menu.h  tab.h
example_mod/include/menu/tabs/: entities_tab.h  mod_tab.h
example_mod/src/: example_mod.cpp  overlay.cpp
example_mod/src/features/: game_events.cpp  services_demo.cpp
example_mod/src/menu/: menu.cpp  tab.cpp
example_mod/src/menu/tabs/: combat_tab.cpp  mod_tab.cpp
modloader/: CMakeLists.txt
modloader/include/: README.md
modloader/injector/: inject.cpp
modloader/sdk/: cube_imgui.cmake  cube_mod.hpp
modloader/sdk/cube/: assets.hpp  common.hpp  config.hpp  entity.hpp  events.hpp  hero.hpp  hookcall.hpp  items.hpp  locale.hpp  logger.hpp  menu.hpp  mod.hpp  selection.hpp  services.hpp  session.hpp  storage.hpp  view.hpp  world.hpp
modloader/sdk/cube_sdk/: api.h  apis.h  core.h  enums.h  events_hooks.h  types.h
modloader/src/: dllmain.cpp
modloader/src/api/: api.cpp  assets.cpp  bridge.h  config.cpp  context.h  locale.cpp  overlay.cpp  storage.cpp
modloader/src/core/: config.cpp  config.h  crash.cpp  exception_name.h  faultguard.cpp  faultguard.h  iat.h  ini.cpp  ini.h  log.cpp  log.h  mem.h  paths.cpp  paths.h
modloader/src/game/: actionlock.cpp  actionlock.h  assetcodec.h  assets.cpp  assets.h  attackwatch.cpp  attackwatch.h  audio.h  capture_detour.h  catalog.cpp  combat.cpp  combat.h  creature.cpp  creature.h  diag.cpp  diag.h  entities.cpp  entities.h  framecache.cpp  framecache.h  gamecontroller.cpp  gamecontroller.h  gamelog.cpp  items.cpp  items.h  offsets.h  pickup.cpp  pickup.h  player.cpp  selection.cpp  selection.h  session.h  signature.cpp  signature.h  status.cpp  status.h  view.cpp  view.h  world.cpp  world.h
modloader/src/game/gamehooks/: gamehooks.h  hookbus.cpp  rawpool.cpp  rawpool.h
modloader/src/game/gamehooks/builtin/: builtin.h  crit.cpp  impact.cpp  maxhealth.cpp  registry.cpp
modloader/src/hooks/: d3d9_hook.cpp  detour.h  dinput.cpp  dinput.h  input_block.cpp  input_block.h  render_dispatch.cpp  window.cpp
modloader/src/loader/core/: conflict.cpp  conflict.h  deps.cpp  events.h  internal.h  modregistry.cpp  owner_name.h  services.cpp  writeguard.h
modloader/src/loader/game/: gameevents.cpp
modloader/src/modloader/: modloader.h
modloader/src/modloader/core/: events.cpp  internal.h  lifecycle.cpp  loader.cpp  modassets.cpp  modassets.h  modconfig.cpp  modconfig.h  modlocale.cpp  modlocale.h  modregistry.h  modstorage.cpp  modstorage.h  owner_name.h  registry.h  report.cpp  services.h  writeguard.cpp
modloader/src/modloader/game/: gameevents.cpp  gameevents.h
modloader/src/overlay/: overlay.cpp  overlay.h
modloader/src/util/: field.h  guard.h  inflight.h
